# meta-trend-talks

./: .gitignore  README.md  docker-compose.yml
.github/actions/cache-node-modules/: action.yml
.github/actions/frontend-build/: action.yml
.github/actions/frontend-deploy/: action.yml
.github/actions/package-install/: action.yml
.github/workflows/: frontend-deploy-dev.yml  frontend-deploy-prod.yml
backend/api-gateway/: cdk.json  openapi.yml  package-lock.json  package.json
backend/api-gateway/lib/: api-gateway-custom-domain-stack.ts  api-gateway-stack.ts
backend/common/cdk/: common-stack-const.ts
backend/common/utils/sources/: test.py
backend/lambda/service/: Dockerfile  cdk.json  package-lock.json  package.json
backend/lambda/service/function/getCryptocurrencyRate/: index.py
backend/lambda/service/function/postNews/: index.py
backend/lambda/service/lambda-layer/libs/: pyproject.toml  requirements.txt
backend/lambda/service/lib/: service-stack.ts
frontend/client/: next-sitemap.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/client/src/app/: _mixins.scss
frontend/client/src/app/(routes)/: globals.scss  layout.tsx  (+2 more)
infrastructure/: .gitignore  cdk.context.json  package-lock.json
infrastructure/common/const/: common-stack-const.ts
infrastructure/common/function/addXRobotsTag/: index.ts
infrastructure/common/function/basicAuthentication/: index.ts
infrastructure/common/function/originRequest/: index.ts
infrastructure/lib/: cetificate-stack.ts  iam-stack.ts  news-frontend-stack.ts  route-53-stack.ts
(+64 files in other folders)
