[tool.poetry]
name = "lambda"
version = "0.1.0"
description = ""
authors = ["o-kun"]

[tool.poetry.dependencies]
python = "3.9.*"
toml = "*"
tomli = "*"
tweepy = "^4.14.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
toml = "*"
pytest = "^5.2"
pytest-asyncio = "0.15.1"
pytest-cov = "2.12.1"
pytest-mock = "*"
coverage = "*"
boto3 = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

